fixes search title on page

--- a/src/pages/[lang]/[platform]/search.astro
+++ b/src/pages/[lang]/[platform]/search.astro
@@ -29,7 +29,7 @@ const search = await index.search(query, {
 
 <html lang={lang}>
   <head>
-    <title>{t("search.resultsHeading")} - Remote Incident Manager</title>
+    <title>{t("search.resultsHeading")} - Scribe for Meetings Documentation</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
   </head>
