Scribe for Meetings combined fix

--- a/src/pages/[lang]/[platform]/combined.astro
+++ b/src/pages/[lang]/[platform]/combined.astro
@@ -27,7 +27,7 @@ const pages = await (async () => {
 <!DOCTYPE html>
 <html lang={lang}>
   <head>
-    <title>Remote Incident Manager</title>
+    <title>Scribe for Meetings</title>
   </head>
   <body>
     {pages.map(({ data, Content }) => {
