Add Dutch localization

--- a/src/components/LanguageSwitcher.astro
+++ b/src/components/LanguageSwitcher.astro
@@ -13,7 +13,7 @@ const { origLang, platform, slug } = Astro.props
 ---
 
 <details>
-  <summary><UIString key="language.switchLanguage" /> (BETA)</summary>
+  <summary><UIString key="language.switchLanguage" /></summary>
   <ul>
     {
       ["en", "de", "es", "fr", "it", "pt", "sv"].map((lang) => {
